RESOLVED FIXED157445
REGRESSION (r193610): Drop down menu doesn’t expand at allofbach.com
https://bugs.webkit.org/show_bug.cgi?id=157445
Summary REGRESSION (r193610): Drop down menu doesn’t expand at allofbach.com
alan
Reported 2016-05-06 20:47:30 PDT
1. Navigate to <http://allofbach.com/en/bwv/bwv-894/> 2. Click the play button 3. Click the box that says “1. Prelude” at the top left
Attachments
WIP patch (5.53 KB, patch)
2016-05-06 21:36 PDT, alan
no flags
WIP patch (3.25 KB, patch)
2016-05-06 21:40 PDT, alan
no flags
Archive of layout-test-results from ews103 for mac-yosemite (841.63 KB, application/zip)
2016-05-06 22:22 PDT, Build Bot
no flags
Archive of layout-test-results from ews106 for mac-yosemite-wk2 (988.09 KB, application/zip)
2016-05-06 22:29 PDT, Build Bot
no flags
Archive of layout-test-results from ews126 for ios-simulator-wk2 (647.70 KB, application/zip)
2016-05-06 22:35 PDT, Build Bot
no flags
Archive of layout-test-results from ews114 for mac-yosemite (1.42 MB, application/zip)
2016-05-06 22:38 PDT, Build Bot
no flags
Patch (7.60 KB, patch)
2016-05-09 13:41 PDT, alan
simon.fraser: review+
buildbot: commit-queue-
Archive of layout-test-results from ews126 for ios-simulator-wk2 (685.12 KB, application/zip)
2016-05-09 16:36 PDT, Build Bot
no flags
alan
Comment 1 2016-05-06 20:47:49 PDT
alan
Comment 2 2016-05-06 21:36:05 PDT
Created attachment 278315 [details] WIP patch EWSing.
alan
Comment 3 2016-05-06 21:40:56 PDT
Created attachment 278316 [details] WIP patch
WebKit Commit Bot
Comment 4 2016-05-06 21:42:52 PDT
Attachment 278316 [details] did not pass style-queue: ERROR: Source/WebCore/page/animation/KeyframeAnimation.cpp:113: Weird number of spaces at line-start. Are you using a 4-space indent? [whitespace/indent] [3] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Build Bot
Comment 5 2016-05-06 22:22:55 PDT
Comment on attachment 278316 [details] WIP patch Attachment 278316 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1280243 New failing tests: imported/blink/transitions/transition-not-interpolable.html fast/css/image-set-value-not-removed-crash.html compositing/visible-rect/animated-from-none.html compositing/layer-creation/animation-overlap-with-children.html compositing/layer-creation/mismatched-rotated-transform-animation-overlap.html
Build Bot
Comment 6 2016-05-06 22:22:57 PDT
Created attachment 278318 [details] Archive of layout-test-results from ews103 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7 2016-05-06 22:29:08 PDT
Comment on attachment 278316 [details] WIP patch Attachment 278316 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1280242 New failing tests: imported/blink/transitions/transition-not-interpolable.html fast/css/image-set-value-not-removed-crash.html compositing/visible-rect/animated-from-none.html compositing/layer-creation/animation-overlap-with-children.html compositing/layer-creation/mismatched-rotated-transform-animation-overlap.html
Build Bot
Comment 8 2016-05-06 22:29:12 PDT
Created attachment 278320 [details] Archive of layout-test-results from ews106 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9 2016-05-06 22:35:47 PDT
Comment on attachment 278316 [details] WIP patch Attachment 278316 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1280245 New failing tests: imported/blink/transitions/transition-not-interpolable.html fast/css/image-set-value-not-removed-crash.html
Build Bot
Comment 10 2016-05-06 22:35:52 PDT
Created attachment 278321 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 11 2016-05-06 22:38:31 PDT
Comment on attachment 278316 [details] WIP patch Attachment 278316 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/1280246 New failing tests: imported/blink/transitions/transition-not-interpolable.html fast/css/image-set-value-not-removed-crash.html compositing/visible-rect/animated-from-none.html compositing/layer-creation/animation-overlap-with-children.html compositing/layer-creation/mismatched-rotated-transform-animation-overlap.html
Build Bot
Comment 12 2016-05-06 22:38:36 PDT
Created attachment 278322 [details] Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
alan
Comment 13 2016-05-09 13:41:28 PDT
Build Bot
Comment 14 2016-05-09 16:36:25 PDT
Comment on attachment 278436 [details] Patch Attachment 278436 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1295334 New failing tests: fast/animation/height-auto-transition-computed-value.html
Build Bot
Comment 15 2016-05-09 16:36:29 PDT
Created attachment 278458 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
alan
Comment 16 2016-05-10 08:26:16 PDT
Note You need to log in before you can comment on or make changes to this bug.